...
                                    <constraint firstAttribute="width" constant="150" id="rvu-YS-N7e"/>
                                </constraints>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="Vha-Ss-MoW">
                                <rect key="frame" x="30" y="343" width="333" height="275"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="EMAIL:" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NoD-lN-IAf">
                                        <rect key="frame" x="0.0" y="0.0" width="333" height="45"/>
                                        <color key="textColor" name="ColorText"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="PASSWORD:" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hy4-g5-1Fc">
                                        <rect key="frame" x="0.0" y="115" width="333" height="45"/>
                                        <color key="textColor" name="ColorText"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xaB-E7-mTn">
...
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NCL-KN-Dee">
                                                <rect key="frame" x="176.66666666666663" y="0.0" width="156.33333333333337" height="45"/>
                                                <color key="backgroundColor" name="ColorButton"/>
                                                <color key="tintColor" name="ColorText"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Login"/>
                                                <connections>
                                                    <action selector="LoginButton:" destination="FxL-jZ-5u1" eventType="touchUpInside" id="Ps6-bg-qqo"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
